--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
     <section class="page-header">
       <h1 class="project-name">libmaxdiv</h1>
       <h2 class="project-tagline">Implementation of the Maximally Divergent Intervals algorithm for Anomaly Detection in multivariate spatio-temporal time-series.</h2>
+      <a href="https://github.com/cvjena/libmaxdiv/zipball/v1.0" class="btn">Download .zip (stable release)</a>
+      <a href="https://github.com/cvjena/libmaxdiv/tarball/v1.0" class="btn">Download .tar.gz (stable release)</a>
+      <a href="https://github.com/cvjena/libmaxdiv/tarball/master" class="btn">Download .tar.gz (development snapshot)</a><br />
       <a href="https://github.com/cvjena/libmaxdiv" class="btn">View on GitHub</a>
-      <a href="https://github.com/cvjena/libmaxdiv/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/cvjena/libmaxdiv/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -35,7 +36,7 @@ anomalous points) in multi-variate spatio-temporal time-series. It has first bee
 
 <p>For non-spatial, purely temporal time-series, a convenient graphical user interface (GUI) is provided to facilitate experimentation with your data without having to write a single line of code.</p>
 
-<p>A detailed installation and user guide can be found in the file <code>libmaxdiv user guide.pdf</code>.</p>
+<p>A detailed installation and user guide can be found in the file <a href="https://github.com/cvjena/libmaxdiv/blob/master/libmaxdiv%20user%20guide.pdf">libmaxdiv user guide.pdf</a>.</p>
 
 <h2>
 <a id="what-is-this-all-about" class="anchor" href="#what-is-this-all-about" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is this all about?</h2>
@@ -55,16 +56,19 @@ in a spatial region rather than at a single location at a single time.</p>
 
 <p>For example, <code>libmaxdiv</code> is able to detect North Sea Storms in a dataset of marine climate variables (wind speed, significant wave height, mean wave period) measured hourly over the 50 years from 1958 to 2007. This results in a time-series with more than 400,000 time-steps, which <code>libmaxdiv</code> is able to process in less than a second.</p>
 
-<p>The following image shows animated heatmaps of the data during the first detection returned by the algorithm. The duration of the actual detection is indicated by a red box:
-<img src="https://lh6.googleusercontent.com/UFivu01jsglSPPIrWYVd1nhOBmQwqFJ2ycVlyXdXnVg-JkMrQ5JveU_LEzg3A3i0AE0TqXIZ" alt="">
+<p>The following image shows animated heatmaps of the data during the first detection returned by the algorithm. The duration of the actual detection is indicated by a red box:<br />
+<img src="coastdat_det_aggregated_00%20(Hamburg-Flut).gif" alt="" style="width: 100%; height: auto;" /><br />
 This detection corresponds to the well-known "Hamburg-Flut", which flooded one fifth of Hamburg in February 1962 and caused 340 deaths.</p>
 
-<p>46 out of the top 50 detections seem to be storms like that indeed and we could verify 28 of them by matching them against historical storm records. 4 of the detections, however, are the very opposite of the storm, but anomalies as well, since they cover time-frames of unusually calm sea conditions with nearly no wind and no waves:
-<img src="https://lh3.googleusercontent.com/9DnCdysN3Cng5zKB1h1AF_jc3ZAnLzt44BUIXbHLFcEW9zVM9doxHZavhBvqYu5cPoyLblOP" alt=""></p>
+<p>46 out of the top 50 detections seem to be storms like that indeed and we could verify 28 of them by matching them against historical storm records. 4 of the detections, however, are the very opposite of the storm, but anomalies as well, since they cover time-frames of unusually calm sea conditions with nearly no wind and no waves:<br />
+<img src="coastdat_det_aggregated_11%20(calm%20sea).gif" alt="" style="width: 100%; height: auto;" /></p>
 
 <p>As a completely different example, <code>libmaxdiv</code> could also be used to detect anomalies in surveillance videos. The following two examples show the same video of a street scene together with the top 5 detections resulting from the use of two different divergence measures implemented in <code>libmaxdiv</code>: the Kullback-Leibler divergence (left) and cross entropy (right). We have used features extracted from a Convolutional Neural Network to represent video frames.</p>
 
-<p>Note the different interpretation of the two divergence measures regarding the nominal state of the system: The Kullback-Leibler divergence identifies traffic as the normal behaviour and detects intervals of no traffic, while cross entropy does the opposite and identifies time-frames with a high traffic frequency as anomalies. Moreover, both approaches identify the pedestrians on the sidewalk, but the localization accuracy is much better with cross entropy.</p>
+<div style="float: left; width: 500px;"><iframe src="https://drive.google.com/file/d/0B2RVZpPdzIXkb1RYaUpuY3ZvNmc/preview" width="500" height="375"></iframe></div>
+<div style="float: right; width: 500px;"><iframe src="https://drive.google.com/file/d/0B2RVZpPdzIXkWU1NU3JFOWlmZVU/preview" width="500" height="375"></iframe></div>
+
+<p style="clear: both;">Note the different interpretation of the two divergence measures regarding the nominal state of the system: The Kullback-Leibler divergence identifies traffic as the normal behaviour and detects intervals of no traffic, while cross entropy does the opposite and identifies time-frames with a high traffic frequency as anomalies. Moreover, both approaches identify the pedestrians on the sidewalk, but the localization accuracy is much better with cross entropy.</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/cvjena/libmaxdiv">libmaxdiv</a> is maintained by <a href="https://github.com/cvjena">cvjena</a>.</span>
