--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
 <a id="maximally-divergent-intervals-for-anomaly-detection" class="anchor" href="#maximally-divergent-intervals-for-anomaly-detection" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Maximally Divergent Intervals for Anomaly Detection</h1>
 
 <p>The <strong>Maximally Divergent Intervals (MDI) Algorithm</strong> can be used to detect anomalous <em>intervals</em> (as opposed to
-anomalous points) in multi-variate spatio-temporal time-series. It has first been described in the following paper:</p>
+anomalous points) in multi-variate spatio-temporal time-series. A description of the algorithm along with a variety of application examples
+can be found in the following article:</p>
 
 <blockquote>
-<p>Erik Rodner, Björn Barz, Yanira Guanche, Milan Flach, Miguel Mahecha, Paul Bodesheim, Markus Reichstein, Joachim Denzler.
-"Maximally Divergent Intervals for Anomaly Detection".
-<em>ICML Workshop on Anomaly Detection (ICML-WS)</em>. 2016</p>
+<p>Björn Barz, Erik Rodner, Yanira Guanche Garcia, Joachim Denzler.
+"Detecting Regions of Maximal Divergence for Spatio-Temporal Anomaly Detection."
+<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (accepted). 2018.</p>
 </blockquote>
 
 <p><code>libmaxdiv</code> is a library providing an efficient <code>C++</code> implementation of the MDI algorithm. A <code>C</code>-style interface may be used to run the algorithm from any other programming language, while bindings for <code>Python</code> are also available.</p>
