--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@ anomalous points) in multi-variate spatio-temporal time-series. A description of
 can be found in the following article:</p>
 
 <blockquote>
-<p>Björn Barz, Erik Rodner, Yanira Guanche Garcia, Joachim Denzler.
-"Detecting Regions of Maximal Divergence for Spatio-Temporal Anomaly Detection."
+<p>Björn Barz, Erik Rodner, Yanira Guanche Garcia, Joachim Denzler.<br/>
+"Detecting Regions of Maximal Divergence for Spatio-Temporal Anomaly Detection."<br/>
 <em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (accepted). 2018.</p>
 </blockquote>
 
