Removed buttons for v1.0, until we release v1.1

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <section class="page-header">
       <h1 class="project-name">libmaxdiv</h1>
       <h2 class="project-tagline">Implementation of the Maximally Divergent Intervals algorithm for Anomaly Detection in multivariate spatio-temporal time-series.</h2>
+      <!--
       <a href="https://github.com/cvjena/libmaxdiv/zipball/v1.0" class="btn">Download v1.0 (.zip)</a>
       <a href="https://github.com/cvjena/libmaxdiv/tarball/v1.0" class="btn">Download v1.0 (.tar.gz)</a>
-      <a href="https://github.com/cvjena/libmaxdiv/tarball/master" class="btn">Download development snapshot</a><br />
+      -->
+      <a href="https://github.com/cvjena/libmaxdiv/tarball/master" class="btn">Download development snapshot</a>
       <a href="https://github.com/cvjena/libmaxdiv" class="btn">View on GitHub</a>
     </section>
 
