Added link to paper

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ anomalous points) in multi-variate spatio-temporal time-series. A description of
 can be found in the following article:</p>
 
 <blockquote>
-<p>Björn Barz, Erik Rodner, Yanira Guanche Garcia, Joachim Denzler.<br/>
-"Detecting Regions of Maximal Divergence for Spatio-Temporal Anomaly Detection."<br/>
-<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (accepted). 2018.</p>
+<p><a href="https://ieeexplore.ieee.org/document/8352745/" target="_blank"><strong>Detecting Regions of Maximal Divergence for Spatio-Temporal Anomaly Detection.</strong></a><br/>
+Björn Barz, Erik Rodner, Yanira Guanche Garcia, Joachim Denzler.<br/>
+<em>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2018.</em></p>
 </blockquote>
 
 <p><code>libmaxdiv</code> is a library providing an efficient <code>C++</code> implementation of the MDI algorithm. A <code>C</code>-style interface may be used to run the algorithm from any other programming language, while bindings for <code>Python</code> are also available.</p>
